// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KataButton has no label as text 1`] = `
Array [
  <div
    className="KataButton"
    onClick={[Function]}
    role="button"
  >
    no label
  </div>,
  <p />,
]
`;

exports[`KataButton is disabled 1`] = `
Array [
  <div
    className="Disabled"
    onClick={[Function]}
    role="button"
  >
    My Button
  </div>,
  <p />,
]
`;

exports[`KataButton with subtext no data selected 1`] = `
Array [
  <div
    className="KataButton"
    onClick={[Function]}
    role="button"
  >
    Save
  </div>,
  <p>
    no data selected
  </p>,
]
`;
